tests/snapshots/raw_api_test__raw_class_counts.snap
---
source: tests/raw_api_test.rs
expression: class_counts
---
[
    (
        Unknown,
        836,
    ),
    (
        ClassD,
        377,
    ),
    (
        ClassE,
        110,
    ),
    (
        ClassC,
        36,
    ),
    (
        ClassA,
        9,
    ),
]
