tests/snapshots/raw_api_test__raw_header.snap
---
source: tests/raw_api_test.rs
expression: header
---
Header {
    title: b"SeeYou Airspace \xa9 Naviter 2011",
    allowed_serials: [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    pc_byte_order: 1,
    key: [
        142,
        73,
        51,
        123,
        14,
        15,
        61,
        172,
        100,
        127,
        208,
        179,
        93,
        0,
        197,
        191,
    ],
    size_of_item: 30,
    size_of_point: 5,
    hdr_items: 1368,
    max_pts: 1525,
    bounding_box: BoundingBox {
        left: -0.085230246,
        top: 0.89215416,
        right: 0.17016976,
        bottom: 0.71856177,
    },
    max_width: 0.06355881,
    max_height: 0.040743887,
    lo_la_scale: 5.3264847e-7,
    header_offset: 210,
    data_offset: 41250,
}
